@@ -1,3 +1,7 @@
+2010-11-25 S. Thiell <stephane.thiell@cea.fr>
+
+	* NodeSet.py: Write a slice-optimized version of RangeSet.__getitem__().
+
 2010-11-03 S. Thiell <stephane.thiell@cea.fr>
 
 	* CLI/Clush.py: Added --rcopy support (trac ticket #55).
